# interpolator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  app.h  main.cpp  marier_spheres.h  marier_spheres.lilit  marier_spheres.lilit.md
.github/workflows/: cmake.yml
components/: CMakeLists.txt  active.h  argcv.h  button.h  circle.h  color.cpp  color.h  cursor.h  demo.cpp  demo.h  draggable.h  flag.h  fmsynth.cpp  fmsynth.h  glyph.h  grab.h  interpolator.h  interpolator_visualizer_state.h  knob.h  libmapper_editor.h  line.h  manual_vis.h  modifier_keys.h  mouse_button.h  mouse_mode.h  mouse_motion.h  mouse_position.h  paint_flag.h  pca.h  position.cpp  position.h  quit_flag.h  repaint_timer.h  save_file.h  selected.h  smooth_position.h  text.h  time.h  update.h  vis.h  (+1 more)
dataset/: CMakeLists.txt
dataset/interpolators/: CMakeLists.txt  intersecting_n_spheres.h  old_interpolators.h  old_shader_interpolators.h
dataset/interpolators/utility/: CMakeLists.txt  distance.h  weights.h
demo/: graphics.h  interpolators_demo.cpp  selection.h  slider.h  types.h  ui.h
demo/interpolators/: CMakeLists.txt  app.h  main.cpp  system.h
demo/interpolators/components/: CMakeLists.txt  demo.cpp  quit_flag.h
demo/interpolators/gl/: CMakeLists.txt  attributes.h  attributes.tests.cpp  ll.h
demo/interpolators/gl/ll/: error.cpp  error.h  error.test.cpp  program.h  program.test.cpp  shader.cpp  shader.h  shader.test.cpp
demo/interpolators/systems/: CMakeLists.txt  demo_maker.cpp  demo_maker.h  platform.cpp  platform.h  system.h
demo/shaders/: basic_inverse_distance.frag  basic_lampshade.frag  intersecting_n-spheres.frag  inverse_distance.frag  nodes.frag  position_passthrough.vert  selection.frag  selection.vert  slider.frag  slider.vert  sphere_lampshade.frag  texture_quad.frag
docs/: Doxyfile  interpolators.html  marier_spheres.html  marier_spheres.html.header
docs/source/: conf.py  index.rst
examples/: color_image.cpp  color_interpolator.cpp  interactive_colors.cpp  interpolators_demo.cpp
gl/: CMakeLists.txt  attributes.cpp  ll.h  program.cpp  program.h  vbo.hpp  vertex_array.cpp  vertex_array.h  vertex_array.test.cpp  vertex_buffer.hpp  vertex_form.cpp  vertex_form.h
gl/ll/: CMakeLists.txt  attribute.cpp  attribute.test.cpp  attribute_element.h  attribute_element.test.cpp  attribute_manifest.cpp  attribute_manifest.h  attribute_manifest.test.cpp  attribute_type.h  attributes.cpp  attributes.h  attributes.test.cpp  buffer.cpp  buffer.h  buffer.test.cpp  error.cpp  error.h  error.test.cpp  program.cpp  program.h  program.test.cpp  sampler.cpp  sampler.h  sampler.test.cpp  shader.cpp  shader.h  shader.test.cpp  texture.cpp  texture.h  texture.test.cpp  uniform_type.h  vertex_array.cpp  vertex_array.h  vertex_array.test.cpp
include/: gl_boilerplate.h  gl_primitives.h  interpolators.h  marier_spheres.h  shader_interpolators.h
interpolator/: marier_spheres.h
lilit/: README.md  convenience_macros.md  interactive_demo.md  interpolators.md  intersecting_n_spheres.md  inverse_weighted_distance.md  lampshade.md  main.md  nodes.md  opengl_primitives.md  opengl_rendering.md  opengl_rendering_boilderplate.md  opengl_rendering_boilerplate.md
lilit/algorithms/: README.md
lilit/algorithms/interpolators/: README.md  intersecting_n_spheres.lilit.md
lilit/algorithms/matrices/: matrix.lilit.md
lilit/demo/: README.md  app_and_systems.lilit.md  main.lilit.md
lilit/demo/components/: demo.lilit.md  quit_flag.lilit.md
lilit/demo/systems/: demo_maker.lilit.md  interpolator_view.md  platform.lilit.md
lilit/interactive_demo/: colour_space.md  drawing.md  event_handling.md  main.md  opengl.md  opengl_rendering.md  sdl.md  selection.md  setup.md  slider.md  sliders.md
shader/: CMakeLists.txt  circle.h  demo_viewer.h  demo_viewer.test.cpp  interpolator_visualizer.cpp  interpolator_visualizer.h  knob_viewer.h  line.h  text.h
systems/: CMakeLists.txt  button.cpp  button.h  circle_painter.cpp  circle_painter.h  cursor.cpp  cursor.h  data_vis.cpp  data_vis.h  demo_dest_knobs.cpp  demo_dest_knobs.h  demo_dragger.cpp  demo_dragger.h  demo_maker.cpp  demo_maker.h  demo_viewer.cpp  demo_viewer.h  demo_vis.cpp  demo_vis.h  demonstration.cpp  demonstration.h  draggable.cpp  draggable.h  edit_interact.cpp  edit_interact.h  editor.cpp  editor.h  glyph.cpp  glyph.h  glyph.test.cpp  interpolator.cpp  interpolator.h  interpolator_viewer.cpp  interpolator_viewer.h  interpolator_visualizer.cpp  interpolator_visualizer.h  knob.cpp  knob.h  knob_layout.cpp  knob_layout.h  (+31 more)
systems/common/: color_spaces.cpp  color_spaces.h  delete_demo.cpp  delete_demo.h  draggable.cpp  draggable.h  editor.cpp  editor.h  insert_demo.cpp  insert_demo.h  interpolator.cpp  interpolator.h  interpolator_destination_to_color.cpp  interpolator_position_to_source.cpp  interpolator_source_to_destination.cpp  interpolator_source_to_position.cpp  vis.cpp  vis.h
systems/private/: pca.cpp  pca.h  pca.test.cpp
test/: CMakeLists.txt  common.h  shader_common.h  shader_sources.h
utility/: CMakeLists.txt  mtof.cpp  mtof.h  random.cpp  random.h
